fixing element alignment on code page

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ h5{
 
 #infoBox{
   background-color: white;
-  margin-left: 70px;
+  margin-left: 30px;
   width: 650px;
   float: left;
 }
